Added the webScoket functionality