@@ -3,22 +3,26 @@ package com.example.stockanalyzer.marketdata.service;
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.time.LocalDate;
-import java.time.ZoneId;
+import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.example.stockanalyzer.marketdata.dto.OhlcApiResponse;
+import com.example.stockanalyzer.marketdata.entites.DataIngestionJob;
+import com.example.stockanalyzer.marketdata.entites.DataIngestionJob.JobStatus;
 import com.example.stockanalyzer.marketdata.entites.DataSource;
 import com.example.stockanalyzer.marketdata.entites.PriceInterval;
 import com.example.stockanalyzer.marketdata.entites.Stock;
 import com.example.stockanalyzer.marketdata.entites.StockPrice;
+import com.example.stockanalyzer.marketdata.event.StockPriceUpdateEvent;
 import com.example.stockanalyzer.marketdata.exception.MarketDataException;
+import com.example.stockanalyzer.marketdata.repository.DataIngestionJobRepository;
 import com.example.stockanalyzer.marketdata.repository.DataSourceRepository;
 import com.example.stockanalyzer.marketdata.repository.StockPriceRepository;
 import com.example.stockanalyzer.marketdata.repository.StockRepository;
@@ -27,163 +31,178 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import reactor.core.publisher.Mono;
 
+/**
+ * Service that orchestrates fetching OHLC data from providers, persisting to DB,
+ * tracking ingestion jobs, and publishing price update events.
+ */
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class MarketDataService {
 
-    private final MarketDataProviderService marketDataProviderService;
+    private static final String JOB_TYPE_FETCH_OHLC = "FETCH_OHLC";
+    private static final DateTimeFormatter DATE_ONLY = DateTimeFormatter.ISO_LOCAL_DATE;
+    private static final DateTimeFormatter DATE_TIME = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+
     private final StockRepository stockRepository;
-    private final StockPriceRepository stockPriceRepository;
     private final DataSourceRepository dataSourceRepository;
+    private final StockPriceRepository stockPriceRepository;
+    private final DataIngestionJobRepository dataIngestionJobRepository;
+    private final MarketDataProviderService marketDataProviderService;
+    private final ApplicationEventPublisher eventPublisher;
 
     /**
-     * Fetches and saves OHLC data for a stock from a data source
-     * 
-     * @param stockId Stock ID
-     * @param dataSourceId Data source ID
-     * @param interval Price interval
-     * @return List of saved stock prices
+     * Fetches OHLC data from the configured provider and saves new records.
+     * Does not run inside a transaction; use fetchAndSaveOhlcDataBlocking for transactional behaviour.
      */
-    @Transactional
     public Mono<List<StockPrice>> fetchAndSaveOhlcData(Long stockId, Long dataSourceId, PriceInterval interval) {
-        log.info("Fetching OHLC data for stockId: {}, dataSourceId: {}, interval: {}", 
-                stockId, dataSourceId, interval);
-
-        // Fetch stock and data source
-        Stock stock = stockRepository.findById(stockId)
-                .orElseThrow(() -> new MarketDataException("Stock not found with id: " + stockId));
-        
-        DataSource dataSource = dataSourceRepository.findById(dataSourceId)
-                .orElseThrow(() -> new MarketDataException("Data source not found with id: " + dataSourceId));
-
-        if (!dataSource.getIsActive()) {
-            throw new MarketDataException("Data source is not active: " + dataSource.getName());
-        }
-
-        // Fetch data from API using the appropriate provider
-        return marketDataProviderService.fetchOhlcData(dataSource, stock.getSymbol(), interval)
-                .map(response -> {
-                    // Validate response
-                    if (response.getErrorMessage() != null) {
-                        throw new MarketDataException("API Error: " + response.getErrorMessage());
-                    }
-                    if (response.getNote() != null) {
-                        throw new MarketDataException("API Note: " + response.getNote());
-                    }
-
-                    // Parse and save data
-                    List<StockPrice> stockPrices = parseAndSaveOhlcData(response, stock, dataSource, interval);
-                    log.info("Successfully saved {} price records", stockPrices.size());
-                    return stockPrices;
+        return Mono.fromCallable(() -> loadStockAndDataSource(stockId, dataSourceId))
+                .flatMap(pair -> {
+                    Stock stock = pair.left();
+                    DataSource dataSource = pair.right();
+                    DataIngestionJob job = createJob(dataSource, stock, interval);
+                    return marketDataProviderService.fetchOhlcData(dataSource, stock.getSymbol(), interval)
+                            .map(response -> convertAndSave(response, stock, dataSource, interval, job))
+                            .doOnSuccess(result -> {
+                                completeJob(job, result.fetched(), result.saved().size(), null);
+                                if (!result.saved().isEmpty()) {
+                                    eventPublisher.publishEvent(new StockPriceUpdateEvent(this, result.saved()));
+                                }
+                            })
+                            .map(result -> result.saved())
+                            .onErrorResume(e -> {
+                                failJob(job, e.getMessage());
+                                return Mono.error(e instanceof MarketDataException ? e : new MarketDataException(e.getMessage(), e));
+                            });
                 });
     }
 
     /**
-     * Parses API response and saves to database
+     * Blocking, transactional variant for use from schedulers or synchronous callers.
      */
-    private List<StockPrice> parseAndSaveOhlcData(
-            OhlcApiResponse response, 
-            Stock stock, 
-            DataSource dataSource, 
-            PriceInterval interval) {
-        
-        List<StockPrice> stockPrices = new ArrayList<>();
-        
-        // Parse Alpha Vantage format
-        Map<String, OhlcApiResponse.TimeSeriesData> timeSeries = getTimeSeriesForInterval(response, interval);
-        
-        if (timeSeries != null && !timeSeries.isEmpty()) {
-            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
-            
-            for (Map.Entry<String, OhlcApiResponse.TimeSeriesData> entry : timeSeries.entrySet()) {
-                String dateTimeStr = entry.getKey();
-                OhlcApiResponse.TimeSeriesData data = entry.getValue();
-                
-                try {
-                    Instant timestamp = parseTimestamp(dateTimeStr, interval);
-                    
-                    StockPrice stockPrice = new StockPrice();
-                    stockPrice.setStock(stock);
-                    stockPrice.setDataSource(dataSource);
-                    stockPrice.setTimestamp(timestamp);
-                    stockPrice.setInterval(interval);
-                    stockPrice.setOpen(parseBigDecimal(data.getOpen() != null ? data.getOpen() : 
-                            (data.getOpenPrice() != null ? data.getOpenPrice().toString() : null)));
-                    stockPrice.setHigh(parseBigDecimal(data.getHigh() != null ? data.getHigh() : 
-                            (data.getHighPrice() != null ? data.getHighPrice().toString() : null)));
-                    stockPrice.setLow(parseBigDecimal(data.getLow() != null ? data.getLow() : 
-                            (data.getLowPrice() != null ? data.getLowPrice().toString() : null)));
-                    stockPrice.setClose(parseBigDecimal(data.getClose() != null ? data.getClose() : 
-                            (data.getClosePrice() != null ? data.getClosePrice().toString() : null)));
-                    stockPrice.setVolume(parseLong(data.getVolume() != null ? data.getVolume() : 
-                            (data.getVolumeValue() != null ? data.getVolumeValue().toString() : null)));
-                    
-                    // Check if record already exists (avoid duplicates)
-                    boolean exists = stockPriceRepository.existsByStockIdAndTimestampAndInterval(
-                            stock.getId(), timestamp, interval);
-                    
-                    if (!exists) {
-                        stockPrices.add(stockPrice);
-                    }
-                } catch (Exception e) {
-                    log.warn("Failed to parse price data for timestamp {}: {}", dateTimeStr, e.getMessage());
-                }
-            }
-        }
-        
-        // Save all records
-        if (!stockPrices.isEmpty()) {
-            stockPriceRepository.saveAll(stockPrices);
-        }
-        
-        return stockPrices;
+    @Transactional
+    public List<StockPrice> fetchAndSaveOhlcDataBlocking(Long stockId, Long dataSourceId, PriceInterval interval) {
+        return fetchAndSaveOhlcData(stockId, dataSourceId, interval)
+                .block();
     }
 
-    private Map<String, OhlcApiResponse.TimeSeriesData> getTimeSeriesForInterval(
-            OhlcApiResponse response, PriceInterval interval) {
+    private record Pair<L, R>(L left, R right) {}
+    private static <L, R> Pair<L, R> pair(L left, R right) { return new Pair<>(left, right); }
+
+    private Pair<Stock, DataSource> loadStockAndDataSource(Long stockId, Long dataSourceId) {
+        Stock stock = stockRepository.findById(stockId)
+                .orElseThrow(() -> new MarketDataException("Stock not found: " + stockId));
+        DataSource dataSource = dataSourceRepository.findById(dataSourceId)
+                .orElseThrow(() -> new MarketDataException("Data source not found: " + dataSourceId));
+        return pair(stock, dataSource);
+    }
+
+    private DataIngestionJob createJob(DataSource dataSource, Stock stock, PriceInterval interval) {
+        DataIngestionJob job = new DataIngestionJob();
+        job.setDataSource(dataSource);
+        job.setStock(stock);
+        job.setJobType(JOB_TYPE_FETCH_OHLC);
+        job.setStatus(JobStatus.RUNNING);
+        job.setStartedAt(Instant.now());
+        job.setIntervalType(interval);
+        job.setRetryCount(0);
+        job = dataIngestionJobRepository.save(job);
+        return job;
+    }
+
+    private void completeJob(DataIngestionJob job, int recordsFetched, int recordsSaved, String errorMessage) {
+        job.setStatus(JobStatus.COMPLETED);
+        job.setCompletedAt(Instant.now());
+        job.setRecordsFetched(recordsFetched);
+        job.setRecordsSaved(recordsSaved);
+        job.setErrorMessage(errorMessage);
+        dataIngestionJobRepository.save(job);
+    }
+
+    private void failJob(DataIngestionJob job, String errorMessage) {
+        job.setStatus(JobStatus.FAILED);
+        job.setCompletedAt(Instant.now());
+        job.setErrorMessage(errorMessage != null && errorMessage.length() > 2000 ? errorMessage.substring(0, 2000) : errorMessage);
+        dataIngestionJobRepository.save(job);
+    }
+
+    private record ConvertResult(int fetched, List<StockPrice> saved) {}
+
+    private ConvertResult convertAndSave(OhlcApiResponse response, Stock stock, DataSource dataSource,
+                                        PriceInterval interval, DataIngestionJob job) {
+        Map<String, OhlcApiResponse.TimeSeriesData> series = selectTimeSeries(response, interval);
+        if (series == null || series.isEmpty()) {
+            log.warn("No time series data for interval {} in response", interval);
+            return new ConvertResult(0, List.of());
+        }
+        int fetched = series.size();
+        List<StockPrice> saved = new ArrayList<>();
+        for (Map.Entry<String, OhlcApiResponse.TimeSeriesData> entry : series.entrySet()) {
+            Instant timestamp = parseTimestamp(entry.getKey());
+            OhlcApiResponse.TimeSeriesData data = entry.getValue();
+            if (data == null) continue;
+            if (stockPriceRepository.existsByStockIdAndTimestampAndInterval(stock.getId(), timestamp, interval)) {
+                continue;
+            }
+            StockPrice sp = toStockPrice(stock, dataSource, timestamp, interval, data);
+            sp = stockPriceRepository.save(sp);
+            saved.add(sp);
+        }
+        return new ConvertResult(fetched, saved);
+    }
+
+    private Map<String, OhlcApiResponse.TimeSeriesData> selectTimeSeries(OhlcApiResponse response, PriceInterval interval) {
         return switch (interval) {
             case ONE_MINUTE -> response.getTimeSeries1min();
             case FIVE_MINUTE -> response.getTimeSeries5min();
             case FIFTEEN_MINUTE -> response.getTimeSeries15min();
             case ONE_HOUR -> response.getTimeSeries60min();
-            case ONE_DAY -> response.getTimeSeriesDaily();
-            default -> response.getTimeSeriesDaily();
+            case ONE_DAY, ONE_WEEK, ONE_MONTH, THIRTY_MINUTE, FOUR_HOUR -> response.getTimeSeriesDaily();
         };
     }
 
-    private Instant parseTimestamp(String dateTimeStr, PriceInterval interval) {
+    private Instant parseTimestamp(String key) {
+        if (key == null || key.isBlank()) return Instant.now();
         try {
-            // Try parsing as date-time (for intraday) - format: "2024-01-25 16:00:00"
-            if (dateTimeStr.contains(" ")) {
-                DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
-                return LocalDate.parse(dateTimeStr.split(" ")[0], DateTimeFormatter.ofPattern("yyyy-MM-dd"))
-                        .atStartOfDay(ZoneId.of("UTC"))
-                        .toInstant();
-            } else {
-                // Parse as date only (for daily) - format: "2024-01-25"
-                DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-                return LocalDate.parse(dateTimeStr, formatter)
-                        .atStartOfDay(ZoneId.of("UTC"))
-                        .toInstant();
-            }
-        } catch (Exception e) {
-            log.error("Failed to parse timestamp: {}", dateTimeStr, e);
-            return Instant.now();
-        }
+            return Instant.parse(key);
+        } catch (Exception ignored) {}
+        try {
+            return LocalDate.parse(key.trim(), DATE_ONLY).atStartOfDay(ZoneOffset.UTC).toInstant();
+        } catch (Exception ignored) {}
+        try {
+            return java.time.LocalDateTime.parse(key.trim(), DATE_TIME).toInstant(ZoneOffset.UTC);
+        } catch (Exception ignored) {}
+        return Instant.now();
     }
 
-    private BigDecimal parseBigDecimal(String value) {
-        if (value == null || value.trim().isEmpty()) {
-            throw new IllegalArgumentException("Cannot parse null or empty value to BigDecimal");
-        }
-        return new BigDecimal(value.trim());
+    private StockPrice toStockPrice(Stock stock, DataSource dataSource, Instant timestamp, PriceInterval interval,
+                                    OhlcApiResponse.TimeSeriesData data) {
+        StockPrice sp = new StockPrice();
+        sp.setStock(stock);
+        sp.setDataSource(dataSource);
+        sp.setTimestamp(timestamp);
+        sp.setInterval(interval);
+        sp.setOpen(toBigDecimal(data.getOpen(), data.getOpenPrice()));
+        sp.setHigh(toBigDecimal(data.getHigh(), data.getHighPrice()));
+        sp.setLow(toBigDecimal(data.getLow(), data.getLowPrice()));
+        sp.setClose(toBigDecimal(data.getClose(), data.getClosePrice()));
+        sp.setVolume(toVolume(data.getVolume(), data.getVolumeValue()));
+        return sp;
     }
 
-    private Long parseLong(String value) {
-        if (value == null || value.trim().isEmpty()) {
-            throw new IllegalArgumentException("Cannot parse null or empty value to Long");
+    private static BigDecimal toBigDecimal(String s, BigDecimal fallback) {
+        if (fallback != null) return fallback;
+        if (s != null && !s.isBlank()) {
+            try { return new BigDecimal(s.trim()); } catch (Exception ignored) {}
         }
-        return Long.parseLong(value.trim());
+        return BigDecimal.ZERO;
+    }
+
+    private static long toVolume(String s, Long fallback) {
+        if (fallback != null) return fallback;
+        if (s != null && !s.isBlank()) {
+            try { return Long.parseLong(s.trim()); } catch (Exception ignored) {}
+        }
+        return 0L;
     }
 }
